<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.uberfoo.keyboard.neuron</groupId>
  <artifactId>KeyNeuron</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>KeyNeuron</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.version>5.10.2</junit.version>
    <maven.compiler.release>23</maven.compiler.release>
    <javafx.version>23</javafx.version>
    <attach.version>4.0.19</attach.version>
    <gluonfx.plugin.version>1.0.23</gluonfx.plugin.version>
    <javafx.plugin.version>0.0.8</javafx.plugin.version>
    <mainClassName>net.uberfoo.keyboard.neuron.KeyNeuronApplication</mainClassName>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>2.18.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>11.2.1</version>
    </dependency><dependency>
      <groupId>org.kordamp.bootstrapfx</groupId>
      <artifactId>bootstrapfx-core</artifactId>
      <version>0.4.0</version>
    </dependency>

    <!-- hid4java for cross-platform HID USB -->
    <dependency>
      <groupId>org.hid4java</groupId>
      <artifactId>hid4java</artifactId>
      <version>0.8.0</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.34</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>Gluon</id>
      <url>https://nexus.gluonhq.com/nexus/content/repositories/releases</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.34</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>${javafx.plugin.version}</version>
        <executions>
          <execution>
            <!-- Default configuration for running with: mvn clean javafx:run -->
            <id>default-cli</id>
            <configuration>
              <mainClass>${mainClassName}</mainClass>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.gluonhq</groupId>
        <artifactId>gluonfx-maven-plugin</artifactId>
        <version>${gluonfx.plugin.version}</version>
        <configuration>
          <target>${gluonfx.target}</target>
          <attachList>
            <list>display</list>
            <list>lifecycle</list>
            <list>statusbar</list>
            <list>storage</list>
          </attachList>
          <reflectionList>
            <list>net.uberfoo.keyboard.keyneuron.views.PrimaryPresenter</list>
            <list>net.uberfoo.keyboard.keyneuron.views.SecondaryPresenter</list>
          </reflectionList>
          <mainClass>${mainClassName}</mainClass>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <!-- GraalVM Native Image Plugin -->
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.10.3</version>
            <extensions>true</extensions>
            <configuration>
              <classesDirectory>${project.build.outputDirectory}</classesDirectory>
              <agent>
                <enabled>true</enabled>
              </agent>
              <metadataRepository>
                <enabled>true</enabled>
              </metadataRepository>
              <mainClass>net.uberfoo.keyboard.neuron.KeyNeuronApplication</mainClass>
              <buildArgs>
                <buildArg>--initialize-at-build-time=javafx.application.Platform,com.sun.javafx.application.PlatformImpl,javafx.beans.property.SimpleBooleanProperty,com.sun.javafx.event.EventHandlerManager</buildArg>
                <buildArg>--initialize-at-run-time=sun.reflect.misc.Trampoline</buildArg>
                <buildArg>--module-path</buildArg>
                <buildArg>${user.home}/.jdks/javafx-sdk-21.0.4/lib</buildArg>
                <buildArg>--add-modules</buildArg>
                <buildArg>javafx.fxml,javafx.controls,javafx.graphics,javafx.base</buildArg>
                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                <buildArg>-H:+AddAllCharsets</buildArg>
              </buildArgs>
            </configuration>
            <executions>
              <execution>
                <id>add-reachability-metadata</id>
                <goals>
                  <goal>add-reachability-metadata</goal>
                </goals>
              </execution>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>build</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>